--- a/editors-definitions/che-pycharm-server-next.yaml
+++ b/editors-definitions/che-pycharm-server-next.yaml
@@ -19,7 +19,8 @@ metadata:
     - Tech-Preview
   attributes:
     publisher: che-incubator
-    version: next
+    version: next (2024.2.3)
+    provider: Provided by [Jet Brains](https://www.jetbrains.com/) under [License](https://www.jetbrains.com/legal/docs/toolbox/user/)
     title: JetBrains PyCharm Professional Edition for Eclipse Che - next
     repository: https://github.com/che-incubator/che-idea-dev-server
     firstPublicationDate: '2024-18-09'
