--- a/.github/workflows/try-in-web-ide.yaml
+++ b/.github/workflows/try-in-web-ide.yaml
@@ -11,18 +11,18 @@
 #
 
 # Add Web IDE link on PRs
-name: Try in Web IDE
+name: web-ide
 
 on:
   pull_request_target:
     types: [opened, synchronize]
 
 jobs:
-  add-web-ide-link:
+  add-link:
     runs-on: ubuntu-22.04
     steps:
       - name: Web IDE Pull Request Check
+        id: try-in-web-ide
         uses: redhat-actions/try-in-web-ide@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          add_comment: false
+          github_token: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
