--- a/bundle/stable/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/stable/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -85,7 +85,7 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Developer Tools
     certified: "false"
-    containerImage: quay.io/eclipse/che-operator:7.94.0
+    containerImage: quay.io/eclipse/che-operator@sha256:734867c1fc059d2a439afcc41cac104cfb8d46901d3bce9afc5a0d573b2e1868
     createdAt: "2024-11-05T14:58:23Z"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces.
@@ -913,27 +913,27 @@ spec:
                       - name: CHE_VERSION
                         value: 7.94.0
                       - name: RELATED_IMAGE_che_server
-                        value: quay.io/eclipse/che-server:7.94.0
+                        value: quay.io/eclipse/che-server@sha256:60150e11529096a6b0fbfb94eab8db429ce69ae046f358fed3a6aaf32c08e885
                       - name: RELATED_IMAGE_dashboard
-                        value: quay.io/eclipse/che-dashboard:7.94.0
+                        value: quay.io/eclipse/che-dashboard@sha256:bfd52e54af6282b70d19057f663c59b9998d1507aae0b0c5d28dde07f09f16d7
                       - name: RELATED_IMAGE_plugin_registry
-                        value: quay.io/eclipse/che-plugin-registry:7.94.0
+                        value: quay.io/eclipse/che-plugin-registry@sha256:db65011b9df86a6031a118e692207408c28f3b8abc04526b0c4b0ece84c1822d
                       - name: RELATED_IMAGE_che_tls_secrets_creation_job
-                        value: quay.io/eclipse/che-tls-secret-creator:alpine-01a4c34
+                        value: quay.io/eclipse/che-tls-secret-creator@sha256:54df0ccf598d230e278d512c3b44bdf24edb280f71da32643db46e0120bfaee0
                       - name: RELATED_IMAGE_single_host_gateway
-                        value: quay.io/eclipse/che--traefik:v2.9.10-8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
+                        value: quay.io/eclipse/che--traefik@sha256:8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
                       - name: RELATED_IMAGE_single_host_gateway_config_sidecar
-                        value: quay.io/che-incubator/configbump:7.94.0
+                        value: quay.io/che-incubator/configbump@sha256:59f2e55917573a02e2eedc2b4ccc2b141d9ea904d81988457fb7bb7263547fb5
                       - name: RELATED_IMAGE_gateway_authentication_sidecar
-                        value: quay.io/openshift/origin-oauth-proxy:4.9
+                        value: quay.io/openshift/origin-oauth-proxy@sha256:870bfe92a4663720775c0dfe5728ecbb10a17f0644eef5f57276ec135034c6a1
                       - name: RELATED_IMAGE_gateway_authorization_sidecar
-                        value: quay.io/openshift/origin-kube-rbac-proxy:4.9
+                        value: quay.io/openshift/origin-kube-rbac-proxy@sha256:354fc75eb7a21a934381e93d03ef9d42bc2c8ae8989fdcacecfb39b863b96ced
                       - name: RELATED_IMAGE_gateway_authentication_sidecar_k8s
-                        value: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
+                        value: quay.io/oauth2-proxy/oauth2-proxy@sha256:393e63c3b924e3f78a5b592ad647417af4ea229398b7bebbbd7ef3d6181aceb5
                       - name: RELATED_IMAGE_gateway_authorization_sidecar_k8s
-                        value: quay.io/brancz/kube-rbac-proxy:v0.13.1
+                        value: quay.io/brancz/kube-rbac-proxy@sha256:738c854322f56d63ebab75de5210abcdd5e0782ce2d30c0ecd4620f63b24694d
                       - name: RELATED_IMAGE_gateway_header_sidecar
-                        value: quay.io/che-incubator/header-rewrite-proxy:latest
+                        value: quay.io/che-incubator/header-rewrite-proxy@sha256:bd7873b8feef35f218f54c6251ea224bea2c8bf202a328230019a0ba2941245d
                       - name: CHE_FLAVOR
                         value: che
                       - name: CONSOLE_LINK_NAME
@@ -962,62 +962,62 @@ spec:
                         value: '{"allowPrivilegeEscalation": true,"capabilities":
                           {"add": ["SETGID", "SETUID"]}}'
                       - name: RELATED_IMAGE_editor_definition_che_idea_next_che_idea_runtime_description
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_idea_next_che_idea_injector
                         value: quay.io/che-incubator/che-idea:next
                       - name: RELATED_IMAGE_editor_definition_che_rubymine_server_next_editor_injector
                         value: quay.io/che-incubator/che-idea-dev-server:next
                       - name: RELATED_IMAGE_editor_definition_che_rubymine_server_next_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_latest_editor_injector
-                        value: quay.io/che-incubator/che-idea-dev-server:latest
+                        value: quay.io/che-incubator/che-idea-dev-server@sha256:9437547c7b0ebb28036d405767a09ea9fd857ecd5471a41ccc4b0c961f398bd0
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_latest_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_webstorm_server_next_editor_injector
                         value: quay.io/che-incubator/che-idea-dev-server:next
                       - name: RELATED_IMAGE_editor_definition_che_webstorm_server_next_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_clion_server_latest_editor_injector
-                        value: quay.io/che-incubator/che-idea-dev-server:latest
+                        value: quay.io/che-incubator/che-idea-dev-server@sha256:9437547c7b0ebb28036d405767a09ea9fd857ecd5471a41ccc4b0c961f398bd0
                       - name: RELATED_IMAGE_editor_definition_che_clion_server_latest_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_code_latest_che_code_injector
-                        value: quay.io/che-incubator/che-code:7.94.0
+                        value: quay.io/che-incubator/che-code@sha256:185ea08621b2b78eb58fadf3348c7aeb3face15b2930b4007e0148bf3f55943e
                       - name: RELATED_IMAGE_editor_definition_che_code_latest_che_code_runtime_description
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_clion_server_next_editor_injector
                         value: quay.io/che-incubator/che-idea-dev-server:next
                       - name: RELATED_IMAGE_editor_definition_che_clion_server_next_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_pycharm_server_latest_editor_injector
-                        value: quay.io/che-incubator/che-idea-dev-server:latest
+                        value: quay.io/che-incubator/che-idea-dev-server@sha256:9437547c7b0ebb28036d405767a09ea9fd857ecd5471a41ccc4b0c961f398bd0
                       - name: RELATED_IMAGE_editor_definition_che_pycharm_server_latest_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_idea_latest_che_idea_runtime_description
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_idea_latest_che_idea_injector
-                        value: quay.io/che-incubator/che-idea:latest
+                        value: quay.io/che-incubator/che-idea@sha256:8aae69dc4b0c122491a75400639af0fe92b5e214c6e68ac97cda29fb58b44151
                       - name: RELATED_IMAGE_editor_definition_che_webstorm_server_latest_editor_injector
-                        value: quay.io/che-incubator/che-idea-dev-server:latest
+                        value: quay.io/che-incubator/che-idea-dev-server@sha256:9437547c7b0ebb28036d405767a09ea9fd857ecd5471a41ccc4b0c961f398bd0
                       - name: RELATED_IMAGE_editor_definition_che_webstorm_server_latest_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_pycharm_server_next_editor_injector
                         value: quay.io/che-incubator/che-idea-dev-server:next
                       - name: RELATED_IMAGE_editor_definition_che_pycharm_server_next_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_rubymine_server_latest_editor_injector
-                        value: quay.io/che-incubator/che-idea-dev-server:latest
+                        value: quay.io/che-incubator/che-idea-dev-server@sha256:9437547c7b0ebb28036d405767a09ea9fd857ecd5471a41ccc4b0c961f398bd0
                       - name: RELATED_IMAGE_editor_definition_che_rubymine_server_latest_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_next_editor_injector
                         value: quay.io/che-incubator/che-idea-dev-server:next
                       - name: RELATED_IMAGE_editor_definition_che_idea_server_next_editor_runtime
-                        value: quay.io/devfile/universal-developer-image:latest
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
                       - name: RELATED_IMAGE_editor_definition_che_code_insiders_che_code_injector
-                        value: quay.io/che-incubator/che-code:insiders
+                        value: quay.io/che-incubator/che-code@sha256:0f1c8cb0fa04428dcb69ca0a092eb57a1b8522999f1bf75d1b6d7e2e0b4319b6
                       - name: RELATED_IMAGE_editor_definition_che_code_insiders_che_code_runtime_description
-                        value: quay.io/devfile/universal-developer-image:latest
-                    image: quay.io/eclipse/che-operator:7.94.0
+                        value: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
+                    image: quay.io/eclipse/che-operator@sha256:734867c1fc059d2a439afcc41cac104cfb8d46901d3bce9afc5a0d573b2e1868
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       failureThreshold: 10
@@ -1185,3 +1185,55 @@ spec:
       targetPort: 9443
       type: ConversionWebhook
       webhookPath: /convert
+  relatedImages:
+    - name: che-operator-7.94.0
+      image: quay.io/eclipse/che-operator@sha256:734867c1fc059d2a439afcc41cac104cfb8d46901d3bce9afc5a0d573b2e1868
+      # tag: quay.io/eclipse/che-operator:7.94.0
+    - name: kube-rbac-proxy-v0.13.1
+      image: quay.io/brancz/kube-rbac-proxy@sha256:738c854322f56d63ebab75de5210abcdd5e0782ce2d30c0ecd4620f63b24694d
+      # tag: quay.io/brancz/kube-rbac-proxy:v0.13.1
+    - name: che-code-7.94.0
+      image: quay.io/che-incubator/che-code@sha256:185ea08621b2b78eb58fadf3348c7aeb3face15b2930b4007e0148bf3f55943e
+      # tag: quay.io/che-incubator/che-code:7.94.0
+    - name: che-code-insiders
+      image: quay.io/che-incubator/che-code@sha256:0f1c8cb0fa04428dcb69ca0a092eb57a1b8522999f1bf75d1b6d7e2e0b4319b6
+      # tag: quay.io/che-incubator/che-code:insiders
+    - name: che-idea-dev-server-latest
+      image: quay.io/che-incubator/che-idea-dev-server@sha256:9437547c7b0ebb28036d405767a09ea9fd857ecd5471a41ccc4b0c961f398bd0
+      # tag: quay.io/che-incubator/che-idea-dev-server:latest
+    - name: che-idea-latest
+      image: quay.io/che-incubator/che-idea@sha256:8aae69dc4b0c122491a75400639af0fe92b5e214c6e68ac97cda29fb58b44151
+      # tag: quay.io/che-incubator/che-idea:latest
+    - name: configbump-7.94.0
+      image: quay.io/che-incubator/configbump@sha256:59f2e55917573a02e2eedc2b4ccc2b141d9ea904d81988457fb7bb7263547fb5
+      # tag: quay.io/che-incubator/configbump:7.94.0
+    - name: header-rewrite-proxy-latest
+      image: quay.io/che-incubator/header-rewrite-proxy@sha256:bd7873b8feef35f218f54c6251ea224bea2c8bf202a328230019a0ba2941245d
+      # tag: quay.io/che-incubator/header-rewrite-proxy:latest
+    - name: universal-developer-image-latest
+      image: quay.io/devfile/universal-developer-image@sha256:21a953159d869f44fc57cf3161935d6d4f402737942c995b83572ef1c65cf270
+      # tag: quay.io/devfile/universal-developer-image:latest
+    - name: che--traefik-v2.9.10-8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
+      image: quay.io/eclipse/che--traefik@sha256:8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
+      # tag: quay.io/eclipse/che--traefik:v2.9.10-8d81a9df1435f9f3d36ac9398465ef2d5d61e671059974db753faaed14b627de
+    - name: che-dashboard-7.94.0
+      image: quay.io/eclipse/che-dashboard@sha256:bfd52e54af6282b70d19057f663c59b9998d1507aae0b0c5d28dde07f09f16d7
+      # tag: quay.io/eclipse/che-dashboard:7.94.0
+    - name: che-plugin-registry-7.94.0
+      image: quay.io/eclipse/che-plugin-registry@sha256:db65011b9df86a6031a118e692207408c28f3b8abc04526b0c4b0ece84c1822d
+      # tag: quay.io/eclipse/che-plugin-registry:7.94.0
+    - name: che-server-7.94.0
+      image: quay.io/eclipse/che-server@sha256:60150e11529096a6b0fbfb94eab8db429ce69ae046f358fed3a6aaf32c08e885
+      # tag: quay.io/eclipse/che-server:7.94.0
+    - name: che-tls-secret-creator-alpine-01a4c34
+      image: quay.io/eclipse/che-tls-secret-creator@sha256:54df0ccf598d230e278d512c3b44bdf24edb280f71da32643db46e0120bfaee0
+      # tag: quay.io/eclipse/che-tls-secret-creator:alpine-01a4c34
+    - name: oauth2-proxy-v7.4.0
+      image: quay.io/oauth2-proxy/oauth2-proxy@sha256:393e63c3b924e3f78a5b592ad647417af4ea229398b7bebbbd7ef3d6181aceb5
+      # tag: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
+    - name: origin-kube-rbac-proxy-4.9
+      image: quay.io/openshift/origin-kube-rbac-proxy@sha256:354fc75eb7a21a934381e93d03ef9d42bc2c8ae8989fdcacecfb39b863b96ced
+      # tag: quay.io/openshift/origin-kube-rbac-proxy:4.9
+    - name: origin-oauth-proxy-4.9
+      image: quay.io/openshift/origin-oauth-proxy@sha256:870bfe92a4663720775c0dfe5728ecbb10a17f0644eef5f57276ec135034c6a1
+      # tag: quay.io/openshift/origin-oauth-proxy:4.9
