--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -93,3 +93,5 @@ entries:
     replaces: eclipse-che.v7.91.0
   - name: eclipse-che.v7.93.0
     replaces: eclipse-che.v7.92.0
+  - name: eclipse-che.v7.94.0
+    replaces: eclipse-che.v7.93.0
