--- a/.github/workflows/minikube-test-operator-arm.yaml
+++ b/.github/workflows/minikube-test-operator-arm.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Install yq
       run: sudo pip install yq
     - name: Install chectl
-      run: bash <(curl -sL https://raw.githubusercontent.com/che-incubator/chectl/4526a1fa80e29e4cc6dfd3fb048a9f75441bf8a2/install.sh) --channel=next
+      run: bash <(curl -sL https://che-incubator.github.io/chectl/install.sh) --channel=next
     - name: Run tests
       run: /bin/bash build/scripts/minikube-tests/test-operator-arm64.sh
     - uses: actions/upload-artifact@v4
