--- a/.github/workflows/minikube-test-operator.yaml
+++ b/.github/workflows/minikube-test-operator.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2019-2023 Red Hat, Inc.
+# Copyright (c) 2019-2025 Red Hat, Inc.
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
@@ -14,15 +14,24 @@ name: Operator test
 on: pull_request
 jobs:
   operator-on-minikube:
-    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        runners: ['ubuntu-22.04', 'ubuntu-22.04-arm']
+    runs-on: ${{ matrix.runners }}
     steps:
     - name: Checkout source code
       uses: actions/checkout@v3
     - name: Start minikube cluster
-      id: run-minikube
-      uses: che-incubator/setup-minikube-action@next
-      with:
-        minikube-version: v1.29.0
+      run: |
+        if [[ ${{matrix.runners}} == 'ubuntu-22.04' ]]; then
+          curl -LO https://github.com/kubernetes/minikube/releases/latest/download/minikube-linux
+          install minikube-linux /usr/local/bin/minikube && rm minikube-linux
+        else
+          curl -LO https://github.com/kubernetes/minikube/releases/latest/download/minikube-linux-arm64
+          install minikube-linux-arm64 /usr/local/bin/minikube && rm minikube-linux-arm64
+        fi
+        minikube start --vm-driver=docker --addons=ingress --cpus 2 --memory 6500
     - name: Install yq
       run: sudo pip install yq
     - name: Install chectl
