--- a/.github/workflows/minikube-test-operator.yaml
+++ b/.github/workflows/minikube-test-operator.yaml
@@ -22,15 +22,17 @@ jobs:
     steps:
     - name: Checkout source code
       uses: actions/checkout@v3
-    - name: Start minikube cluster
+    - name: Set arch environment variable
       run: |
         if [[ ${{matrix.runners}} == 'ubuntu-22.04' ]]; then
-          curl -LO https://github.com/kubernetes/minikube/releases/latest/download/minikube-linux
-          install minikube-linux /usr/local/bin/minikube && rm minikube-linux
+          echo arch="amd64" >> $GITHUB_ENV
         else
-          curl -LO https://github.com/kubernetes/minikube/releases/latest/download/minikube-linux-arm64
-          install minikube-linux-arm64 /usr/local/bin/minikube && rm minikube-linux-arm64
+          echo arch="arm64" >> $GITHUB_ENV
         fi
+    - name: Start minikube cluster
+      run: |
+        curl -LO https://github.com/kubernetes/minikube/releases/latest/download/minikube-linux-${{env.arch}}
+        install minikube-linux-${{env.arch}} /usr/local/bin/minikube && rm minikube-linux-${{env.arch}}
         minikube start --vm-driver=docker --addons=ingress --cpus 2 --memory 6500
     - name: Install yq
       run: sudo pip install yq
